 * @destination (for variable exits) is now a standard attribute, and has
   a helpfile. [MG]
 * Sound is now propagated through audible variable exits. Suggested by 
   Mercutio. [SW]
 * The internal QUEUE attribute is no longer used to track the number
   of action lists an object has queued; the objdata system is used
   instead.  [SW]

Commands:
 * Added @mail/review for reading mail you've sent, and @mail/retract for
   deleting unread mail that you sent. Idea from MUX. Patch by Minion.
 * @hook/list now shows error messages if you don't have permission to use
   it, or if a command has no hooks, instead of failing silently. Suggested
   by Padraic. [MG]

Functions:
 * Functions that take a sort type argument now accept 'mtime' for
   sorting based on object's modification time. Patch by Minion.

Fixes:
 * lit() didn't properly handle '\'s. Reported by Wiggles. [MG]
 * listq() incorrectly returned all registers (including %0-%9, %i0, etc),
   not just %q-registers. Reported by Wiggles. [MG]
 * The mud_url code didn't always work correctly in Firefox because http
   headers weren't sent. [MG]
 * %0 and %1 arguments weren't properly passed through verb attributes after
   a change in p8. Reported by Padraic. [MG]
 * Fix really stupid copy-and-paste error in magic sorts on strings with
   ANSI, which broke setinter() and friends. Reported by Minion. [MG]
 * Help fixes by Wiggles, Mouvar and others. [MG]
 * Memory leak in ldelete() fixed. [MG]
 * Fix a crashbug reported by Minion. [MG]
 * Sorting functions now ignore ANSI when sorting a string as a number
   or dbref. From report by Mouvar. [MG]
 * strreplace() was broken for overly long length arguments. Reported
   by Ashen-Shugar.  [SW]
 * Compile errors on Windows with OpenSSL. Reported by Daniko.
 * @uptime could report negative times for the first dump, purge, etc after
   a game was started. Reported by Cooee. [MG]

Version 1.8.4 patchlevel 8                                 Nov 11, 2011

Major changes: